# Services

./: .gitmodules  CMakeLists.txt  LICENSE
Chatter/: CMakeLists.txt  ChatterFlow.txt
Chatter/Client/: CMakeLists.txt
Chatter/Client/Include/: ChatterClientApp.hpp  ChatterClientDialog.hpp  ChatterClientDialogDef.h  ChatterClientReceiver.hpp  ChatterLoginDialog.hpp  ChatterLoginDialogDef.h  ChatterRegisterDialog.hpp  ChatterRegisterDialogDef.h
Chatter/Client/Resource/: ChatterClientDialog.rc  ChatterLoginDialog.rc  ChatterRegisterDialog.rc
Chatter/Client/Source/: ChatterClientApp.cpp  ChatterClientDialog.cpp  ChatterClientMain.cpp  ChatterClientReceiver.cpp  ChatterClientReceiverMain.cpp  ChatterLoginDialog.cpp  ChatterRegisterDialog.cpp
Chatter/Codec/: CMakeLists.txt
Chatter/Codec/Include/: ChatterCodec.hpp  ChatterMsg.hpp
Chatter/Codec/Source/: ChatterCodec.cpp  ChatterMsg.cpp
Chatter/Server/: CMakeLists.txt
Chatter/Server/Include/: ChatterAlfanumericGenerator.hpp  ChatterAuthenticator.hpp  ChatterCookie.hpp  ChatterIAuthenticator.hpp  ChatterServer.hpp  ChatterService.hpp
Chatter/Server/Source/: ChatterAlfanumericGenerator.cpp  ChatterAuthenticator.cpp  ChatterCookie.cpp  ChatterServer.cpp  ChatterServerUt.cpp  ChatterService.cpp  ChatterServiceMain.cpp
PrinterClient/: CMakeLists.txt
PrinterClient/Source/: PrinterClientAppEx.cpp
PrinterSer/: CMakeLists.txt
PrinterSer/Include/: PrinterSer.hpp
PrinterSer/Source/: PrinterSer.cpp  PrinterSerMain.cpp
PrinterSerCodec/: CMakeLists.txt
PrinterSerCodec/Include/: PrinterSerCodec.hpp  PrinterSerMsg.hpp
PrinterSerCodec/Source/: PrinterSerCodec.cpp  PrinterSerMsg.cpp
ServiceProviderClient/: CMakeLists.txt
ServiceProviderClient/Include/: CachedClientStore.hpp  ClientStore.hpp  MessageSender.hpp  ServiceProviderClient.hpp
ServiceProviderClient/Source/: CachedClientStore.cpp  ClientAppEx.cpp  ClientStore.cpp  ServiceProviderClient.cpp
ServiceProviderSer/: CMakeLists.txt
ServiceProviderSer/Include/: AddrRegister.hpp  ServiceProviderSer.hpp
ServiceProviderSer/Source/: AddrRegister.cpp  AddrRegisterUt.cpp  ServiceProviderSer.cpp  ServiceProviderSerMain.cpp
ServiceProviderSerCodec/: CMakeLists.txt
ServiceProviderSerCodec/Include/: ServiceProviderSerCodec.hpp  ServiceProviderSerMsg.hpp
ServiceProviderSerCodec/Source/: ServiceProviderSerCodec.cpp  ServiceProviderSerMsg.cpp
Utils/: CMakeLists.txt
Utils/Include/: ClientWithCodec.hpp  JsonCodec.hpp
